<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_background"
    tools:context=".ui.SettingActivity">

    <View
        android:id="@+id/toolbar"
        android:layout_width="190dp"
        android:layout_height="49dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/github_logo_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/ripple_button"
        android:contentDescription="@string/back_button"
        android:onClick="backButton"
        app:layout_constraintBottom_toTopOf="@+id/settingTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settingTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/setting_activity"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/view_background"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingTextView">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="19dp">


            <androidx.cardview.widget.CardView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="19dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toTopOf="@+id/reminder"
                app:layout_constraintEnd_toEndOf="@id/container"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/container"
                app:layout_constraintTop_toTopOf="@+id/container">


                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_card" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottieLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/language" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lottieLanguage"
                        android:layout_centerHorizontal="true"
                        android:text="@string/language"
                        android:textSize="18sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/reminder"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_margin="19dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/container"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/container"
                app:layout_constraintTop_toBottomOf="@+id/language">

                <View
                    android:id="@+id/reminderView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_card" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:text="@string/_09_00"
                        android:textSize="36sp" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottieReminder"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_below="@id/time"
                        android:layout_centerHorizontal="true"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/reminder" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lottieReminder"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="16dp"
                        android:text="@string/reminder"
                        android:textSize="18sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>