<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_background"
    tools:context=".ui.MainActivity">

    <View
        android:id="@+id/toolbar"
        android:layout_width="190dp"
        android:layout_height="49dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/github_logo_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/view_background"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="19dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/searchActivity"
                android:layout_width="0dp"
                android:layout_height="198dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="9dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toStartOf="@+id/favoriteActivity"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/container"
                app:layout_constraintTop_toTopOf="@+id/container">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_card" />

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/search" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="16dp"
                    android:text="@string/search" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/favoriteActivity"
                android:layout_width="0dp"
                android:layout_height="198dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="19dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="@id/container"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/searchActivity"
                app:layout_constraintTop_toTopOf="@+id/container">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_card" />

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/favorite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="16dp"
                    android:text="@string/favorite" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/settingActivity"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="19dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="@id/container"
                app:layout_constraintStart_toStartOf="@id/container"
                app:layout_constraintTop_toBottomOf="@+id/searchActivity">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_card" />

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="16dp"
                    android:text="@string/setting" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/aboutActivity"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="19dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="@id/container"
                app:layout_constraintStart_toStartOf="@id/container"
                app:layout_constraintTop_toBottomOf="@+id/settingActivity">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_card" />

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/about" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="16dp"
                    android:text="@string/about" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>